# JuliaFatou

./: .gitignore  .gitmodules  .gitsubmodules  CMakeLists.txt  LICENSE  README.md  calculate.cu  calculate.hpp  format.sh  format_build.sh  main.cpp  printimage.cpp  printimage.hpp
include/: calculate.hpp  constants.hpp  draw.hpp  events.hpp  gui.hpp  printimage.hpp  types.hpp  variables.hpp
lib/: CMakeLists.txt
lib/Julia/: CMakeLists.txt
lib/Julia/src/: calculate.cu
src/: calculate.cu  draw.cpp  events.cpp  gui.cpp  main.cpp  printimage.cpp  variables.cpp
